.tmp/AUTHZ-001/AC-3-red-against-start.txt
   Compiling proc-macro2 v1.0.106
   Compiling quote v1.0.45
   Compiling unicode-ident v1.0.24
   Compiling thiserror v2.0.18
   Compiling syn v2.0.117
   Compiling thiserror-impl v2.0.18
   Compiling but-authz v0.0.0 (/Users/justinrich/Projects/gitbutler/.kb-run-sprint/worktrees/AUTHZ-001/crates/but-authz)
error[E0432]: unresolved imports `but_authz::Authority`, `but_authz::AuthoritySet`, `but_authz::ParseAuthorityError`
 --> crates/but-authz/tests/authority.rs:1:17
  |
1 | use but_authz::{Authority, AuthoritySet, ParseAuthorityError};
  |                 ^^^^^^^^^  ^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^ no `ParseAuthorityError` in the root
  |                 |          |
  |                 |          no `AuthoritySet` in the root
  |                 no `Authority` in the root
  |
help: a similar name exists in the module
  |
1 - use but_authz::{Authority, AuthoritySet, ParseAuthorityError};
1 + use but_authz::{authority, AuthoritySet, ParseAuthorityError};
  |
help: a similar name exists in the module
  |
1 - use but_authz::{Authority, AuthoritySet, ParseAuthorityError};
1 + use but_authz::{Authority, authority, ParseAuthorityError};
  |

For more information about this error, try `rustc --explain E0432`.
error: could not compile `but-authz` (test "authority") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
